deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reverse-words
  name: reverse-words
spec:
  template:
    spec:
      containers:
      - env:
        - name: RELEASE
          value: Stage Release
        - $patch: replace
        #image: quay.io/mavazque/tekton-reversewords:testt
        image: image-registry.openshift-image-registry.svc:5000/demo/sonarqube-example-git
        name: reverse-words
