route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: reverse-words
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: "Service"
    name: demo
    weight: 100
